# snelleutf

./: .gitattributes  .gitignore  .gitmodules  Cargo.lock.license  Cargo.toml  README.md  SECURITY.md  codecov.yml
.woodpecker/: reuse.yaml  test.yaml
snelleutf/: Cargo.toml  README.md
snelleutf-src/: Cargo.toml  Makefile  README.md
snelleutf-src/src/: lib.rs  simdutf_c.h.license
snelleutf-sys/: Cargo.toml  README.md  build.rs
snelleutf-sys/src/: lib.rs
snelleutf/src/: b64.rs  count.rs  detect.rs  error.rs  lib.rs  utils.rs  validate.rs
