# SPDX-FileCopyrightText: 2026 The Snelleutf Authors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "snelleutf-sys"
version = "0.1.0"
edition = "2024"
links = "simdutf"
description = "Bindings to simdutf (raw extern C)"
keywords = ["simdutf"]
categories = ["external-ffi-bindings"]
authors = ["The Snelleutf Authors"]
license = "Apache-2.0 OR MIT"
repository = "https://codeberg.org/chaste/snelleutf"

[dependencies]

[build-dependencies]
bindgen.workspace = true
pkg-config.workspace = true
