# SPDX-FileCopyrightText: 2026 The Snelleutf Authors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "snelleutf"
version = "0.1.0"
edition = "2024"
description = "Fast Unicode operations - safe bindings to simdutf"
keywords = ["simdutf"]
categories = ["external-ffi-bindings"]
authors = ["The Snelleutf Authors"]
license = "Apache-2.0 OR MIT"
repository = "https://codeberg.org/chaste/snelleutf"

[features]
default = ["std"]

std = []

[dependencies]
snelleutf-sys.workspace = true
